# pa-square

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
models/: endpoint_consts.py  habitica.py
src/pa_square/: __init__.py  __main__.py  config.py  main.py
src/pa_square/bot/: __init__.py  commands.py  events.py
src/pa_square/habitica/: __init__.py  constants.py  manager.py
src/pa_square/utils/: __init__.py  keep_alive.py
test/models/: test_habitica.py
tests/: __init__.py
tests/bot/: __init__.py
tests/habitica/: __init__.py  test_manager.py
